--- a/index.html
+++ b/index.html
@@ -246,16 +246,16 @@
                 
                 <div class="grid grid-cols-2 sm:grid-cols-4 gap-4 mt-4">
                     <button class="bg-black text-yellow-500 p-3 rounded-lg flex items-center justify-center gap-2 hover:scale-105 transition-all duration-300">
-                        <i class="bi bi-joystick"></i> GAMING LAPTOP
+                        <a href="#MACBOOK"><i class="bi bi-joystick"></i> GAMING LAPTOP</a>
                     </button>
                     <button class="bg-black text-yellow-500 p-3 rounded-lg flex items-center justify-center gap-2 hover:scale-105 transition-all duration-300">
-                        <i class="bi bi-laptop"></i> MACBOOK
+                        <a href="#MACBOOK"><i class="bi bi-laptop"></i> MACBOOK</a>
                     </button>
                     <button class="bg-black text-yellow-500 p-3 rounded-lg flex items-center justify-center gap-2 hover:scale-105 transition-all duration-300">
-                        <i class="bi bi-display"></i> DESIGNER DESKTOP
+                        <a href="#DESKTOP"><i class="bi bi-display"></i> DESIGNER DESKTOP</a>
                     </button>
                     <button class="bg-black text-yellow-500 p-3 rounded-lg flex items-center justify-center gap-2 hover:scale-105 transition-all duration-300">
-                        <i class="bi bi-headphones"></i> GAMING GEAR
+                        <a href="#GEAR"><i class="bi bi-headphones"></i> GAMING GEAR</a>
                     </button>
                 </div>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-5">
@@ -359,13 +359,13 @@
             <li><a href="#" class="hover:text-yellow-400">Privacy Policy</a></li>
             <li><a href="#" class="hover:text-yellow-400">FAQ</a></li>
         </ul>
-        <ul class="space-y-4 flex md:flex-col flex-row gap-4 mb-4">
+        <ul class="flex flex-row gap-4 mb-4">
             <li><a href="https://www.facebook.com/share/1AK2PkuQH2/?mibextid=wwXIfr" class="text-2xl text-blue-800 hover:text-yellow-400"><i class="bi bi-facebook"></i></a></li>
             <li><a href="https://t.me/PHANG_VIPHATH" class="text-2xl text-blue-500 hover:text-yellow-400"><i class="bi bi-telegram"></i></a></li>
-            <li><a href="https://www.tiktok.com/@01001001.01010100" class="text-2xl text-black hover:text-yellow-400"><i class="bi bi-tiktok"></i></a></li>
+            <li><a href="https://www.tiktok.com/@01001001.01010100" class="text-2xl text-blue-500 hover:text-yellow-400"><i class="bi bi-tiktok"></i></a></li>
         </ul>
         <ul class="space-y-2 mb-4">
-            <li>© 2022 computer shop in phath. All rights reserved.</li>
+            <li>© 2025 computer shop in phath. All rights reserved.</li>
             <li><a href="#" class="hover:text-yellow-400">Privacy Policy</a></li>
             <li><a href="#" class="hover:text-yellow-400">Terms & Conditions</a></li>
             <li><a href="#" class="hover:text-yellow-400">Contact Us</a></li>
